<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_prikoli"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_prikoli" />
        <item
            android:id="@+id/nav_recept"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_recept" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_report" />
    </group>
</menu>
